assets/stylesheets/style.css
@font-face {
  font-family: 'Iowan Old Style';
  src: url('fonts/IowanOldStyle-Roman.woff') format('woff'),
  url('fonts/IowanOldStyle-Roman.ttf') format('truetype');
}

@font-face {
  font-family: 'Iowan Old Style';
  src: url('fonts/IowanOldStyle-Bold.woff') format('woff'),
  url('fonts/IowanOldStyle-Bold.ttf') format('truetype');
  font-weight: bold;
}

@font-face {
  font-family: 'Iowan Old Style';
  src: url('fonts/IowanOldStyle-Italic.woff') format('woff'),
  url('fonts/IowanOldStyle-Italic.ttf') format('truetype');
  font-style: italic;
}

@font-face {
  font-family: 'Iowan Old Style';
  src: url('fonts/IowanOldStyle-BoldItalic.woff') format('woff'),
  url('fonts/IowanOldStyle-BoldItalic.ttf') format('truetype');
  font-weight: bold;
  font-style: italic;
}

body {
  font-family: 'Iowan Old Style', Palatino, "Palatino Linotype", Helvetica, serif;
  margin-top: 1em;
  color: #333;
  /*background-color: #d9d9d9; */ }

#container {
  width: 1000px;
  margin: 0 auto; }

/* Tag styles. */

/** {box-sizing: border-box;}*/

a, a:visited {
  text-decoration: none;
  color: #0092bf; }

a:hover {
  text-decoration: underline; }

abbr[title] {
  cursor: pointer;
}

blockquote {
  border-left: 4px solid #ddd;
  padding: 0 15px;
  color: #777;
  margin: 0; }

code {
  padding: 0 5px;
  background-color: rgba(0, 0, 0, 0.1); }

pre {
  font-size: 13px;
  overflow: scroll;
  padding: 15px;
  color: #fff;
  background: #000; }

footer {
  text-align: center; }
  footer p {
    font-family: "Trebuchet MS", sans-serif;
    font-size: 13px;
    font-weight: 100;
    color: #333; }

hr {
  border-width: 1px 0 0 0;
  border-style: dashed;
  border-color: #bbb; }

h1, h2 {
  line-height: normal; }
  h1 a, h1 a:visited, h2 a, h2 a:visited {
    color: inherit; }
  h1 {
    font-size: 3em; }
  h2 {
    font-size: 2.8em;
    margin: 0 0 26px 0; }
  h1 small {
    font-size: 0.7em; }
  .cell h2 {
    color: #f14a29; }
  .post-content h2 {
    font-size: 1.3em; }

.page-title, header > .cell {
  display: inline-block;
  float: left;
  height: 126px; }

.page-title .name {
  display: block;
  width: 180px; }
header > .cell {
  width: 520px;
  min-height: 126px;
  margin-right: 0;
  padding-right: 50px;
  position: relative; }

header > .cell > p {
  margin: 0; }
.header-links {
  position: absolute;
  right: 10px;
  top: 5px;
  width: 40px; }
.header-link {
  float: left;
  padding-top: 5px;
  padding-left: 5px; }
  .header-link-image {
    width: 32px; }

.author-photo {
  height: 150px;
  float: left;
  margin-right: 10px;
  position: absolute;
  bottom: 20px;
  right: 0; }
  .author-photo > img {
    border-radius: 100px; }

.page-title {
  clear: both;
  margin: 0 10px 10px 0;
  padding: 30px;
  font-size: 45px;
  font-weight: bold;
  text-transform: uppercase;
  color: #fff;
  background: #0092bf;
  position: relative; }
#container > header, #container > #main {
  margin-right: -10px; }
.page-title {
  width: 330px; }
.cell {
  font-size: 18px;
  float: left;
  width: 980px;
  margin: 0 10px 10px 0;
  line-height: 1.45; }
  .half-cell {
    width: 435px;
    height: 665px; }
  .half-cell, .header-cell {
    padding: 29px;
    border: 1px dashed #bbb; }
  .cell h1 {
    color: #0092bf; }

.projects {
  padding-left: 20px; }

.new-project-type {
  margin-top: 18px; }

/* Post styles. */
.post-list, .post-list > li {
  padding-left: 0;
  list-style: none; }

.post-date {
  color: #888; }

.post-suggest-improvement {
  float: right; }

.post-content img {
  max-width: 930px; }

.page-links {
  min-height: 64px; }
  .hackernews-info {
    position: absolute;
    margin-right: 100px; }

.clearfix:before, .clearfix:after {content: " "; display: table; }
.clearfix:after {clear: both;}

/* =============================================================================
   PLACEHOLDER Media Queries for Responsive Design.
   These override the primary ('mobile first') styles
   Modify as content requires.
   ========================================================================== */

@media only screen and (max-width: 1000px) {
  #container {
    width: auto;
    margin: 0 10px; }
    #container > header, #container > #main {
      margin-right: 0; }
  h2 {
    font-size: 1.75em; }
  .page-title, header > .cell {
    width: auto;
    height: auto;
    display: block;
    float: none; }
  .page-title {
    margin: 0 0 10px 0; }
  .header-links {
    float: none;
    padding-bottom: 10px; }
  .cell, .cell.nopadding {
    float: none;
    width: auto;
    height: auto;
    margin-right: 0; }
  .post-content img {
    max-width: 100%; }
  .talk-wrap {
    max-width: 650px; }
}

